feat: portfolio skeleton

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,12 +1,29 @@
+@import 'styles/animations.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: 'Inter';
+	src: url('/fonts/Inter-Regular.woff2') format('woff2'),
+		url('/fonts/Inter-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Inter';
+	src: url('/fonts/InterDisplay-Bold.woff2') format('woff2'),
+		url('/fonts/InterDisplay-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
+
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+	@apply bg-white dark:bg-slate-900;
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+	@media (prefers-color-scheme: dark) {
+		color-scheme: dark;
+	}
 }
